v0.0.1/modules/schema/pages/class/GenericDataSetVersion.adoc
= `GenericDataSetVersion`
:toclevels: 4



[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GenericDataSetVersion`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* *`GenericDataSetVersion`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<majorVersion,`majorVersion`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The universal CIM version name describing a consistent set of packages.+++

| <<minorVersion,`minorVersion`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Describe minor updates and error corrections.+++

| <<published,`published`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The date when the complete CIM canonical model is published and made available for use, 
After the publication the major version and name space are updated.+++
|===

'''


//[discrete]
[#majorVersion]
=== `majorVersion`
+++The universal CIM version name describing a consistent set of packages.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GenericDataSetVersion.majorVersion`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#minorVersion]
=== `minorVersion`
+++Describe minor updates and error corrections.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GenericDataSetVersion.minorVersion`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#published]
=== `published`
+++The date when the complete CIM canonical model is published and made available for use, 
After the publication the major version and name space are updated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GenericDataSetVersion.published`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===


